--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,12 +3,13 @@
 client_id = "daf5c07e016538106bb21f43c6d379d1"
 name = "offers-store"
 handle = "offers-store"
-application_url = "https://1f46-2405-201-ac0b-30e3-244d-9826-4773-aa8f.ngrok-free.app"
+application_url = "https://korea-por-teams-staffing.trycloudflare.com"
 embedded = true
 
 [build]
 automatically_update_urls_on_dev = true
 dev_store_url = "quickstart-aeedc0e5.myshopify.com"
+include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
@@ -16,9 +17,9 @@ scopes = "write_products"
 
 [auth]
 redirect_urls = [
-  "https://1f46-2405-201-ac0b-30e3-244d-9826-4773-aa8f.ngrok-free.app/auth/callback",
-  "https://1f46-2405-201-ac0b-30e3-244d-9826-4773-aa8f.ngrok-free.app/auth/shopify/callback",
-  "https://1f46-2405-201-ac0b-30e3-244d-9826-4773-aa8f.ngrok-free.app/api/auth/callback"
+  "https://korea-por-teams-staffing.trycloudflare.com/auth/callback",
+  "https://korea-por-teams-staffing.trycloudflare.com/auth/shopify/callback",
+  "https://korea-por-teams-staffing.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
